--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/contacto.css">
+    
+    
 </head>
 
 
@@ -59,9 +61,15 @@
             <label for="exampleFormControlTextarea1">Asunto</label>
             <textarea name="Asunto" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <input type="submit" value="Submit" class="btn">
+        
+        
+        <input type="submit" value="Enviar" class="btn"> 
+
     </form>
 
+    <h5>Ubicación de la oficina</h5>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3695.5441260383664!2d-101.01245048557365!3d22.143350554170663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842a98acdec5295f%3A0xa877365298ca8afa!2sImparable%20Coworking!5e0!3m2!1ses-419!2smx!4v1573694590749!5m2!1ses-419!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+   
 </body>
 
 </html>
